<resources>
    <string name="app_name">Better Life</string>
    <string name="share_value">This app is recommended for being very high efficient healthcare in the current period. It is also capable detecting Leukemia Disease and Brain Tumor with quite high probability. Please download and install the app. \nLink: https://play.google.com/store/apps/details?id=com.betterlife.</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="first_heading">Detect and learn about Brain Tumor and its corresponding treatment</string>
    <string name="second_heading">Schedule an appointment with the right doctor</string>
    <string name="third_heading">Prescribe appropriate medicine to the patient</string>
    <string name="fourth_heading">Call ambulance immediately near to your doorstep</string>
    <string name="fifth_heading">Provide feedback and make a community</string>
    <string name="first_desc">Revolutionary app empowers early detection and knowledge acquisition of Brain Tumors with the help of machine learning based technology</string>
    <string name="second_desc">Effortlessly Schedule Appointments with Specialized Doctors through our Android App</string>
    <string name="third_desc">Ensure optimal patient care with precise medical guidance by prescribing the most suitable medication.</string>
    <string name="fourth_desc">Ensure prompt emergency medical assistance with our doorstep ambulance service.</string>
    <string name="fifth_desc">Engage in meaningful discussions, share insights, and foster a supportive community through constructive feedback. </string>
    <string name="about_brain_tumor1_desc"> A brain tumor is a mass or growth of abnormal cells in your brain. Many different types of brain tumors exist. Some brain tumors are noncancerous (benign), and some brain tumors are cancerous (malignant). Brain tumors can begin in your brain (primarybrain tumors), or cancer can begin in other parts of your body and spread to your brain as secondary (metastatic) brain tumors.
    \n\nHow quickly a brain tumor grows can vary greatly. The growth rate as well as the location of a brain tumor determines how it will affect the function of your nervous system.\n\nBrain tumor treatment options depend on the type of brain tumor you have, as well as its size and location.</string>
    <string name="brainTumorTreatmentText1">Treatment for a brain tumor depends on the type, size and location of the tumor, as well as your overall health and your preferences.</string>
    <string name="brainTumorTreatmentText2">If the brain tumor is located in a place that makes it accessible for an operation, your surgeon will work to remove as much of the brain tumor as can be done safely.
        \n\nSome brain tumors are small and easy to separate from surrounding brain tissue, which makes complete surgical removal possible. Other brain tumors can\'t be separated from surrounding tissue or they\'re located near sensitive areas in your brain, making surgery risky. In these situations, your doctor removes as much of the tumor as is safe.
        \n\nEven removing a portion of the brain tumor may help reduce your signs and symptoms.
        \n\nSurgery to remove a brain tumor carries risks, such as infection and bleeding. Other risks may depend on the part of your brain where your tumor is located. For instance, surgery on a tumor near nerves that connect to your eyes may carry a risk of vision loss.</string>
    <string name="brainTumorTreatmentText3">Radiation therapy uses high-energy beams, such as X-rays or protons, to kill tumor cells. Radiation therapy can come from a machine outside your body (external beam radiation), or, very rarely, radiation can be placed inside your body close to your brain tumor (brachytherapy).
        \n\nExternal beam radiation can focus just on the area of your brain where the tumor is located, or it can be applied to your entire brain (whole-brain radiation). Whole-brain radiation is most often used to treat cancer that spreads to the brain from some other part of the body and forms multiple tumors in the brain.
        \n\nTraditionally, radiation therapy uses X-rays, but a newer form of this treatment uses proton beams. Proton beam therapy allows doctors to control the radiation more precisely. It may be helpful for treating brain tumors in children and tumors that are very close to sensitive areas of the brain. Proton beam therapy isn\'t as widely available as traditional X-ray radiation therapy.
        \n\nSide effects of radiation therapy depend on the type and dose of radiation you receive. Common side effects during or immediately following radiation include fatigue, headaches, memory loss, scalp irritation and hair loss.</string>
    <string name="brainTumorTreatmentText4">Stereotactic radiosurgery is not a form of surgery in the traditional sense. Instead, radiosurgery uses multiple beams of radiation to give a highly focused form of radiation treatment to kill the tumor cells in a very small area. Each beam of radiation isn\'t particularly powerful, but the point where all the beams meet — at the brain tumor — receives a very large dose of radiation to kill the tumor cells.
        \n\nThere are different types of technology used in radiosurgery to deliver radiation to treat brain tumors, such as a Gamma Knife or linear accelerator.
        \n\nRadiosurgery is typically done in one treatment, and usually you can go home the same day.</string>
    <string name="brainTumorTreatmentText5">Chemotherapy uses drugs to kill tumor cells. Chemotherapy drugs can be taken orally in pill form or injected into a vein (intravenously). The chemotherapy drug used most often to treat brain tumors is temozolomide (Temodar). Other chemotherapy drugs may be recommended depending on the type of cancer.
        \n\nChemotherapy side effects depend on the type and dose of drugs you receive. Chemotherapy can cause nausea, vomiting and hair loss.
        \n\nTests of your brain tumor cells can determine whether chemotherapy will be helpful for you. The type of brain tumor you have also is helpful in determining whether to recommend chemotherapy.</string>
    <string name="brainTumorTreatmentText6">Targeted drug treatments focus on specific abnormalities present within cancer cells. By blocking these abnormalities, targeted drug treatments can cause cancer cells to die.
       \n\nTargeted therapy drugs are available for certain types of brain tumors, and many more are being studied in clinical trials. Your doctor may have your tumor cells tested to see whether targeted therapy is likely to be an effective treatment for your brain tumor.</string>
    <string name="brainTumorTreatmentText7">
        Because brain tumors can develop in parts of the brain that control motor skills, speech, vision and thinking, rehabilitation may be a necessary part of recovery. Depending on your needs, your doctor may refer you to:\n\n
        <ul>
            <li>Physical therapy to help you regain lost motor skills or muscle strength.</li>\n
            <li>Occupational therapy to help you get back to your normal daily activities, including work, after a brain tumor or other illness.</li>\n
            <li>Speech therapy with specialists in speech difficulties (speech pathologists) to help if you have difficulty speaking.</li>\n
            <li>Tutoring for school-age children to help kids cope with changes in their memory and thinking after a brain tumor.</li>\n
        </ul>
    </string>
    <string name="feedbackCardDescText">A health app is categorized by the FDA as mobile software that diagnoses, tracks, or treats disease. A wellness app is a mobile software that enhances or tracks the overall health of the user. These apps can address mental, physical, social, environmental, or even spiritual factors that relate to overall health.
    </string>
    <string name="feedbackPostCommentText">This apps is very useful to me. I am vey happy to this. But think, if many Prescription saved option is have so that very useful to us. Thanks</string>
    <string name="brain_tumor_characteristics">The characteristics of a brain tumor can vary depending on its type, location, size, and rate of growth. Common characteristics include:
     \n\n<b>1. Location:</b> Brain tumors can occur in different areas of the brain, such as the cerebral hemispheres, cerebellum, brain stem, or pituitary gland.
     \n\n<b>2. Size: Tumors</b> can range in size from small and localized to large and invasive, potentially affecting multiple brain regions.
     \n\n<b>3. Growth rate:</b> Some brain tumors grow slowly over a long period, while others may grow rapidly and aggressively.
     \n\n<b>4. Invasiveness:</b> Malignant brain tumors can invade nearby healthy brain tissue, making complete removal challenging.</string>
    <string name="brain_tumor_types">There are various types of brain tumors, including:
        \n\n<b>1. Gliomas:</b> The most common type, originating from the glial cells that support and nourish the neurons. Gliomas include astrocytomas, oligodendrogliomas, and ependymomas.
        \n\n<b>2. Meningiomas:</b> Arising from the meninges, the protective membranes covering the brain and spinal cord. Meningiomas are often benign.
        \n\n<b>3. Pituitary adenomas:</b> Tumors that develop in the pituitary gland, a small gland at the base of the brain that regulates hormone production.
        \n\n<b>4. Medulloblastomas:</b> Common in children, these tumors occur in the cerebellum and can spread to other parts of the central nervous system.
        \n\n<b>5. Metastatic tumors:</b> Secondary brain tumors that result from cancer spreading from another part of the body, such as the lung, breast, or skin.</string>
    <string name="diagnosis_brain_tumor">Medical History and Physical Examination: The doctor will review the patients medical history, including any symptoms experienced, and conduct a thorough physical examination.
        \n\n<b>1. Neurological Examination:</b> The doctor will assess the patients neurological function, including coordination, reflexes, and sensory responses.
        \n\n<b>2. Imaging Tests:</b> Imaging techniques such as magnetic resonance imaging (MRI) and computed tomography (CT) scans are commonly used to visualize the brain and detect the presence of a tumor. These tests provide detailed information about the size, location, and characteristics of the tumor.
        \n\n<b>3. Biopsy:</b> In some cases, a biopsy may be necessary to confirm the presence of a brain tumor and determine its type. A small sample of the tumor tissue is removed for laboratory analysis, often during a surgical procedure.
        \n\n<b>4. Additional Tests:</b> Additional tests such as blood tests, positron emission tomography (PET) scans, or angiography may be performed to gather more information about the tumor and its effects on the brain.</string>
</resources>