<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".BrainTumorTreatment">
<!--    android:background="#9CDDF8ED"-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInner1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="10"
        android:background="#C342BEF6"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/detectBrainTumorToolBarBackId"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/back_black_vector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postHeadingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:fontFamily="@font/balo_bhai"
            android:text="Diagnosis and Treatment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        android:fontFamily="@font/brandon_grotesque_black"-->
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Diagnosis"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/diagnosis_brain_tumor"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Surgery"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText2"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Radiation Therapy"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText3"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Radiosurgery"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText4"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Chemotherapy"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText5"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Targeted Drug Therapy"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText6"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#c0c0c0" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:text="Rehabilitation After Treatment"
                android:elevation="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:background="@drawable/banner_textview"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/brainTumorTreatmentText7"
                android:textSize="16sp"
                android:layout_marginBottom="50dp"
                android:textColor="@color/black"/>

        </LinearLayout>


    </ScrollView>



    <!--____________Bottom Chip Bar______________________-->
    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottomNavbarBrainTumorTreatmetId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="10"
        android:background="@drawable/round_corners"
        android:elevation="8dp"
        app:cnb_iconSize="28dp"
        app:cnb_menuResource="@menu/bottom_navbar"
        app:cnb_orientationMode="horizontal"
        app:cnb_radius="8dp"
        app:cnb_unselectedColor="@color/black"
        tools:ignore="MissingConstraints" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>